# agno_learning

./: .gitignore  README.md  pyproject.toml
1. Agent/: 1_basicagent.py  2_team.py  3_customtool.py  3_route_team.py  4_advancetool.py  4_coordinate_team.py  5_collaborate_team.py  README.md
2. Tools/: 2_advancetool.py  3_creatingtoolkit.py  README.md
3. Memory/: 1_built_in_memory.py  2_session_storage.py  3_user_memory.py  4_session_summary.py  README.md
4. State/: 1_custom_state.py  README.md
4. State/tools/: add_product_to_cart.py  get_all_products.py
5. Human In the Loop/: 1_user_confirmation.py  2_toolkit_confirmation.py  3_user_input.py  4_external_execution.py  README.md
