[project]
name = "agnoai"
version = "0.1.0"
description = "AI agent and workflow creation using agno"
authors = [
    {name = "sponge-bobs-square-pants",email = "parthchawla65@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13 <4.0"
dependencies = [
    "agno (>=1.7.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "groq (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
